# img-toolkit

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.MD  imageWorker.js  index.html  main.js  package-lock.json  package.json  tsconfig.json  types.d.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  release.yml
assets/: example-BDD7QUJ6.js  example-BwaeGU3k.css  example-D4XdkR2j.js  example-DGjRpSEn.js  example-DRqOOgX-.css  example-Dgf1XZJ0.js  example-DvjIlg8J.css
example/: imageWorker.js  index.html  main.css  main.js
src/: index.ts  lib.rs  resizer.ts
src/example/: index.html  main.ts  style.css
src/example/pages/edit-page/: edit-page.ts
src/example/pages/resize-page/: resize-page.css  resize-page.ts
src/example/pages/resize-page/scripts/: image-preview-form.ts  resize-file.ts
src/utils/: applyBrightness.ts  calculateDimensions.ts  getMimeType.ts  resampleImage.ts
ts-wrapper/: resizeImage.ts
vite/example/: vite.config.ts
vite/libs/: vite.config.ts
